--- a/notebooks/model_pipeline.ipynb
+++ b/notebooks/model_pipeline.ipynb
@@ -2,22 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "7e8a5776",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Pedro\\anaconda3\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-      "  from pandas.core import (\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score"
    ]
   },
   {
@@ -49,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f5e61aa6",
    "metadata": {},
    "outputs": [],
@@ -85,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f5877e76",
    "metadata": {},
    "outputs": [],
@@ -109,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "ea21416a",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1014,7 @@
        "[28 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,10 +1026,201 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa1904c7",
+   "id": "c6f16372",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "17222e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TARGET = 'preço'\n",
+    "\n",
+    "FEATURES = [\n",
+    "    'rating', 'disponibilidade', \n",
+    "    'cat_Business', 'cat_Childrens', 'cat_Classics', 'cat_Default', 'cat_Fantasy',\n",
+    "    'cat_Fiction', 'cat_Food and Drink', 'cat_Historical Fiction', 'cat_History',\n",
+    "    'cat_Horror', 'cat_Humor', 'cat_Music', 'cat_Mystery', 'cat_Nonfiction',\n",
+    "    'cat_Outras', 'cat_Philosophy', 'cat_Poetry', 'cat_Romance',\n",
+    "    'cat_Science', 'cat_Science Fiction', 'cat_Sequential Art',\n",
+    "    'cat_Thriller', 'cat_Travel', 'cat_Womens Fiction', 'cat_Young Adult'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1a0d9d6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna(subset=[TARGET])\n",
+    "df[TARGET] = pd.to_numeric(df[TARGET], errors='coerce').fillna(df[TARGET].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "89e44e45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in ['rating', 'disponibilidade']:\n",
+    "    df[col] = pd.to_numeric(df[col], errors='coerce').fillna(0) # Trata nulos com 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3e32b70e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_model = df[FEATURES + [TARGET]].copy()\n",
+    "\n",
+    "# Remover linhas com valores faltantes após a conversão, se houver algum problema\n",
+    "df_model = df_model.dropna()\n",
+    "\n",
+    "X = df_model[FEATURES]\n",
+    "y = df_model[TARGET]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "842e8573",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dados de Treino: 800 amostras\n",
+      "Dados de Teste: 200 amostras\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "print(f\"Dados de Treino: {len(X_train)} amostras\")\n",
+    "print(f\"Dados de Teste: {len(X_test)} amostras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "03c96e7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def treinar_e_avaliar(modelo, X_treino, y_treino, X_teste, y_teste, nome_modelo):\n",
+    "    \"\"\"Treina o modelo, faz previsões e calcula as métricas de performance.\"\"\"\n",
+    "\n",
+    "    # Treinamento\n",
+    "    modelo.fit(X_treino, y_treino)\n",
+    "\n",
+    "    # Previsão\n",
+    "    y_pred = modelo.predict(X_teste)\n",
+    "\n",
+    "    # Métricas\n",
+    "    rmse = np.sqrt(mean_squared_error(y_teste, y_pred))\n",
+    "    r2 = r2_score(y_teste, y_pred)\n",
+    "\n",
+    "    print(f\"\\n--- Resultados para {nome_modelo} ---\")\n",
+    "    print(f\"RMSE (Root Mean Squared Error): {rmse:.4f}\")\n",
+    "    print(f\"R² (Coeficiente de Determinação): {r2:.4f}\")\n",
+    "\n",
+    "    return {'Modelo': nome_modelo, 'RMSE': rmse, 'R2': r2}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d5e36cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c059a508",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Resultados para Regressão Linear ---\n",
+      "RMSE (Root Mean Squared Error): 14.9104\n",
+      "R² (Coeficiente de Determinação): -0.0583\n",
+      "\n",
+      "--- Resultados para Random Forest ---\n",
+      "RMSE (Root Mean Squared Error): 17.2032\n",
+      "R² (Coeficiente de Determinação): -0.4089\n",
+      "\n",
+      "--- Resultados para Gradient Boosting ---\n",
+      "RMSE (Root Mean Squared Error): 15.5454\n",
+      "R² (Coeficiente de Determinação): -0.1504\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultados = []\n",
+    "\n",
+    "# 5.1. Regressão Linear\n",
+    "lr = LinearRegression()\n",
+    "res_lr = treinar_e_avaliar(lr, X_train, y_train, X_test, y_test, \"Regressão Linear\")\n",
+    "resultados.append(res_lr)\n",
+    "\n",
+    "# 5.2. Random Forest Regressor\n",
+    "# O Random Forest é um algoritmo de Ensemble que geralmente oferece alta performance\n",
+    "rf = RandomForestRegressor(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "res_rf = treinar_e_avaliar(rf, X_train, y_train, X_test, y_test, \"Random Forest\")\n",
+    "resultados.append(res_rf)\n",
+    "\n",
+    "# 5.3. Gradient Boosting Regressor (O terceiro algoritmo)\n",
+    "# O Gradient Boosting também é um algoritmo de Ensemble, robusto e muito usado\n",
+    "gbr = GradientBoostingRegressor(n_estimators=100, learning_rate=0.1, max_depth=3, random_state=42)\n",
+    "res_gbr = treinar_e_avaliar(gbr, X_train, y_train, X_test, y_test, \"Gradient Boosting\")\n",
+    "resultados.append(res_gbr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "aa1904c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==============================================\n",
+      "             COMPARAÇÃO FINAL DE MODELOS\n",
+      "==============================================\n",
+      "              Modelo       RMSE        R2\n",
+      "0   Regressão Linear  14.910421 -0.058349\n",
+      "2  Gradient Boosting  15.545442 -0.150417\n",
+      "1      Random Forest  17.203203 -0.408860\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_resultados = pd.DataFrame(resultados)\n",
+    "\n",
+    "print(\"\\n==============================================\")\n",
+    "print(\"             COMPARAÇÃO FINAL DE MODELOS\")\n",
+    "print(\"==============================================\")\n",
+    "print(df_resultados.sort_values(by='R2', ascending=False))"
+   ]
   },
   {
    "cell_type": "code",
